<resources>
    <string name="app_name">Track your habits</string>
    <string name="select_border_color">Select border color</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="type">Type</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="periodicity">Periodicity</string>
    <string name="repeat">Repeat</string>
    <string name="times_every">times every</string>
    <string name="days">days</string>
    <string name="save">Save</string>
    <string name="fab">fab</string>
    <string name="habit_name_placeholder">Habit: %s</string>
    <string name="habit_description_placeholder">Description: %s</string>
    <string name="habit_type_placeholder">Type: %s</string>
    <string name="habit_priority_placeholder">%s</string>
    <string name="habit_periodicity_placeholder">Repeat %s times every %s days</string>
    <string name="habits_title">Habits</string>
    <string name="about_title">About</string>
    <string name="about_text">Your own habits tracker</string>
    <string name="habits">Habits</string>
    <string name="edit_habit">Edit habit</string>
    <string name="about">About</string>

    <string-array name="sort_parameters">
        <item>Frequency</item>
        <item>Priority</item>
    </string-array>
</resources>