<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditHabitFragment">

    <Button
        android:id="@+id/btnSaveHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save"
        app:borderWidth="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/habitName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/habitDescription"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"

                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitName" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="165dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textType">

                <RadioButton
                    android:id="@+id/radioButtonGood"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/radioButtonBad"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/bad" />
            </RadioGroup>

            <TextView
                android:id="@+id/priorityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="@+id/prioritySpinner"
                app:layout_constraintTop_toBottomOf="@+id/habitDescription" />

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/priorities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/priorityText" />

            <TextView
                android:id="@+id/borderColorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/select_border_color"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBorderColor"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                app:backgroundTint="@color/design_default_color_primary"
                app:layout_constraintBottom_toBottomOf="@+id/borderColorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.015"
                app:layout_constraintStart_toEndOf="@+id/borderColorText"
                app:layout_constraintTop_toTopOf="@+id/borderColorText"
                android:contentDescription="@string/fab" />

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:gravity="start"
                android:text="@string/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitDescription" />

            <TextView
                android:id="@+id/text_repeat_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/repeat"
                app:layout_constraintStart_toStartOf="@+id/borderColorText"
                app:layout_constraintTop_toBottomOf="@+id/borderColorText" />

            <EditText
                android:id="@+id/edit_repeat_count"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_repeat_count"
                app:layout_constraintStart_toEndOf="@+id/text_repeat_count"
                app:layout_constraintTop_toTopOf="@+id/text_repeat_count" />

            <TextView
                android:id="@+id/textFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/times_every"
                app:layout_constraintBottom_toBottomOf="@+id/text_repeat_count"
                app:layout_constraintStart_toEndOf="@+id/edit_repeat_count"
                app:layout_constraintTop_toTopOf="@+id/text_repeat_count" />

            <EditText
                android:id="@+id/edit_frequency"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"

                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textFrequency"
                app:layout_constraintStart_toEndOf="@+id/textFrequency"
                app:layout_constraintTop_toTopOf="@+id/textFrequency" />

            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/days"
                app:layout_constraintBottom_toBottomOf="@+id/edit_frequency"
                app:layout_constraintStart_toEndOf="@+id/edit_frequency"
                app:layout_constraintTop_toTopOf="@+id/edit_frequency" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>